--- a/Source/src/app/navigation/main-navigation/main-navigation.component.html
+++ b/Source/src/app/navigation/main-navigation/main-navigation.component.html
@@ -1,13 +1,20 @@
-<nav class="navbar navbar-default">
+ <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">Landmarks</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Pictures</a></li>
+      <li><a href="#">Videos</a></li>
+      <li><a href="#">Stories</a></li>
+      <li><a routerLink="/dashboard" routerLinkActive="active">Most visited </a></li>
     </ul>
+    <form class="navbar-form navbar-left">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Search</button>
+    </form>
   </div>
-</nav>
+</nav> 
+<router-outlet></router-outlet>
