--- a/Source/src/app/navigation/main-navigation/main-navigation.component.html
+++ b/Source/src/app/navigation/main-navigation/main-navigation.component.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Landmarks</a>
@@ -9,12 +9,12 @@
       <li><a href="#">Stories</a></li>
       <li><a routerLink="/dashboard" routerLinkActive="active">Most visited </a></li>
     </ul>
-    <form class="navbar-form navbar-left">
+    <div class="navbar-form navbar-left">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" placeholder="Search" name="keyword" [(ngModel)]="keyword">
       </div>
-      <button type="submit" class="btn btn-default">Search</button>
-    </form>
+      <a href="/search/{{keyword}}" class="btn btn-default">Search for {{keyword}} </a>
+    </div>
   </div>
-</nav> 
+</nav>
 <router-outlet></router-outlet>
