--- a/Source/src/app/search/search.component.html
+++ b/Source/src/app/search/search.component.html
@@ -3,10 +3,10 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div id="imaginary_container"> 
                 <div class="input-group stylish-input-group">
-                    <input type="text" class="form-control"  placeholder="Search" >
+                    <input type="text" class="form-control"  placeholder="Search" [(ngModel="keyword")] >
                     <span class="input-group-addon">
-                        <button type="submit">
-                            <span class="glyphicon glyphicon-search"></span>
+                        <button type="submit" >
+                            <span class="glyphicon glyphicon-search"> </span>
                         </button>  
                     </span>
                 </div>
