--- a/Source/src/app/navigation/main-navigation/main-navigation.component.html
+++ b/Source/src/app/navigation/main-navigation/main-navigation.component.html
@@ -11,7 +11,7 @@
     </ul>
     <div class="navbar-form navbar-left">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search" name="keyword" [(ngModel)]="keyword">
+        <input type="text" class="form-control" placeholder="Search" id="search" name="keyword" [(ngModel)]="keyword">
       </div>
       <a href="/search/{{keyword}}" class="btn btn-default">Search for {{keyword}} </a>
     </div>
