Add stories component

--- a/Source/src/app/navigation/main-navigation/main-navigation.component.html
+++ b/Source/src/app/navigation/main-navigation/main-navigation.component.html
@@ -6,7 +6,7 @@
     <ul class="nav navbar-nav">
       <li><a href="#">Pictures</a></li>
       <li><a href="#">Videos</a></li>
-      <li><a href="#">Stories</a></li>
+      <li><a routerLink="/stories">Stories</a></li>
       <li><a routerLink="/dashboard" routerLinkActive="active">Most visited </a></li>
     </ul>
     <div class="navbar-form navbar-left">
