--- a/Source/src/app/stories/stories.component.html
+++ b/Source/src/app/stories/stories.component.html
@@ -1,12 +1,14 @@
 <div class="container">
             <div class="row">
                 <div class="col-md-8">
+               
                   <div class="page-header">
-                    <h1><small class="pull-right">3 stories</small> Stories </h1>
+                    <h1><small class="pull-right"> {{allstories.length}} stories</small> Stories </h1>
                   </div> 
+                   <div *ngIf="allstories.length > 0">
                    <div class="comments-list">
                        <div class="media" *ngFor="let story of allstories">
-                           <p class="pull-right"><small>5 days ago</small></p>
+                           <p class="pull-right"><small>{{story.created | date: 'dd/MM/yyyy'}}</small></p>
                            Story was written by user: <span> {{story.username}} </span>
                             <div class="media-body">
                                 
@@ -17,7 +19,30 @@
                             </div>
                           </div>
                    </div>
-                   <button class="btn btn-primary">Add new story </button>
+</div>
+
+                   <button class="btn btn-primary" (click)="isEdit=true" >Add new story </button>
+
+                <div *ngIf="isEdit">      
+                  <form #f="ngForm" (ngSubmit)="onSubmit(f)" class="col-md-8" method="POST">           
+                    <div class="form-group">
+                      <label for="username">Username</label>
+                      <input #username="ngModel" type="text" class="form-control" id="username" name="username" placeholder="Username" required  minlength="2" [(ngModel)]="story.username">  
+                    </div>
+                   <div class="form-group">
+                     <label for="town">Town</label>
+                      <input #town="ngModel" type="text" class="form-control" id="town" name="town" placeholder="Town" required  [(ngModel)]="story.town">   
+                   </div> 
+                  <div class="form-group">
+                  <label for="text">Story</label>
+                  <textarea  type="text" class="form-control" id="text" name="text" placeholder="Story details"  [(ngModel)]="story.text" cols="10" rows="30"> </textarea>
+                   </div> 
+                   <div>
+                     {{f.value | json}}
+                   </div> 
+                    <button type="submit" class="btn btn-default" [disabled]="!f.valid ">Submit</button>
+                  </form>
+                </div>
                 </div>
             </div>
         </div>
