add angular github editor

--- a/Source/frontend/src/app/stories/stories.component.html
+++ b/Source/frontend/src/app/stories/stories.component.html
@@ -35,7 +35,8 @@
                    </div> 
                   <div class="form-group">
                   <label for="text">Story</label>
-                  <textarea  type="text" class="form-control" id="text" name="text" placeholder="Story details"  [(ngModel)]="story.text" cols="10" rows="30"> </textarea>
+                   <!--<trix-editor angular-trix class="trix-content" [(ngModel)]="story.text"></trix-editor>-->
+                  <!--<textarea  type="text" class="form-control" id="text" name="text" placeholder="Story details"  [(ngModel)]="story.text" cols="10" rows="30"> </textarea>-->
                    </div> 
                    <div>
                      {{f.value | json}}
