--- a/Source/frontend/src/app/stories/stories.component.html
+++ b/Source/frontend/src/app/stories/stories.component.html
@@ -13,17 +13,18 @@
                             <div class="media-body">
                                 
                               <h4 class="media-heading user_name">Story is about {{story.town}}</h4>
-                                {{story.text}}
-                              
+                               <p Markdown> 
+                                 {{story.text}}
+                              </p>
                               <p><small><a href="">Like</a> - <a href="">Share</a></small></p>
                             </div>
                           </div>
                    </div>
 </div>
 
-                   <button class="btn btn-primary" (click)="isEdit=true" >Add new story </button>
+                   <button class="btn btn-primary" (click)="setEdit()" >Add new story </button>
 
-                <div *ngIf="isEdit">      
+                <div [hidden]="!isEdit">      
                   <form #f="ngForm" (ngSubmit)="onSubmit(f)" class="col-md-8" method="POST">           
                     <div class="form-group">
                       <label for="username">Username</label>
@@ -36,7 +37,9 @@
                   <div class="form-group">
                   <label for="text">Story</label>
                    <!--<trix-editor angular-trix class="trix-content" [(ngModel)]="story.text"></trix-editor>-->
-                  <!--<textarea  type="text" class="form-control" id="text" name="text" placeholder="Story details"  [(ngModel)]="story.text" cols="10" rows="30"> </textarea>-->
+                    <textarea type="text" class="form-control" id="text" name="text" placeholder="Story details"  [(ngModel)]="story.text" cols="10" rows="30">
+                 
+                     </textarea>
                    </div> 
                    <div>
                      {{f.value | json}}
