--- a/Source/frontend/src/app/navigation/main-navigation/main-navigation.component.html
+++ b/Source/frontend/src/app/navigation/main-navigation/main-navigation.component.html
@@ -1,20 +1,24 @@
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Landmarks</a>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Landmarks</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="#">Pictures</a></li>
+            <li><a href="#">Videos</a></li>
+            <li><a routerLink="/stories">Stories</a></li>
+            <li><a routerLink="/dashboard" routerLinkActive="active">Most visited </a></li>
+        </ul>
+        <div class="navbar-form navbar-left">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search" id="search" name="keyword" [(ngModel)]="keyword">
+            </div>
+            <a href="/search/{{keyword}}" class="btn btn-default">Search for {{keyword}} </a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Sign up</a></li>
+        </ul>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a href="#">Pictures</a></li>
-      <li><a href="#">Videos</a></li>
-      <li><a routerLink="/stories">Stories</a></li>
-      <li><a routerLink="/dashboard" routerLinkActive="active">Most visited </a></li>
-    </ul>
-    <div class="navbar-form navbar-left">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search" id="search" name="keyword" [(ngModel)]="keyword">
-      </div>
-      <a href="/search/{{keyword}}" class="btn btn-default">Search for {{keyword}} </a>
-    </div>
-  </div>
 </nav>
 <router-outlet></router-outlet>
