--- a/Source/frontend/src/app/login/login.component.html
+++ b/Source/frontend/src/app/login/login.component.html
@@ -1,17 +1,17 @@
 <form class="center">
-  <div class="loginmodal-container">
-    <h1>Login to Your Account</h1><br>
-    <form>
-      <input type="text" name="user" [(ngModel)]="username" placeholder="Username">
-      <input type="password" name="pass" [(ngModel)]="password" placeholder="Password">
-      
-      <p class="text text-error"> {{error}} </p>
-      
-      <input type="submit" name="login" class="login loginmodal-submit" value="Login" (click)="login()" >
-    </form>
+    <div class="loginmodal-container">
+        <h1>Login to Your Account</h1><br>
+        <form>
+            <input type="text" name="user" [(ngModel)]="username" placeholder="Username">
+            <input type="password" name="pass" [(ngModel)]="password" placeholder="Password">
 
-    <div class="login-help">
-      <a href="#">Register</a> - <a href="#">Forgot Password</a>
+            <p class="text text-error"> {{error}} </p>
+
+            <input type="submit" name="login" class="login loginmodal-submit" value="Login" (click)="login()">
+        </form>
+
+        <div class="login-help">
+            <a href="/register">Register</a> - <a href="#">Forgot Password</a>
+        </div>
     </div>
-  </div>
-  <form>
+    <form>
