Edit registration form

--- a/Source/frontend/src/app/register/register.component.html
+++ b/Source/frontend/src/app/register/register.component.html
@@ -32,6 +32,14 @@
       Please fill in Password, between 8 and 30 symbols, containing at least one digit and at least one letter
     </div>
   </div>
+   <div class="form-group">
+    <label for="confirmPassword">Confirm Password:</label>
+    <input type="password" class="form-control" name="confirmPassword" id="confirmPassword" [(ngModel)]="model.confirmPassword" #confirmPassword="ngModel"
+      required minlength="6" maxlength="30" pattern="^(?=.*\d)(?=.*[a-zA-Z]).{8,30}$">
+    <div [hidden]="confirmPassword != password" class="alert alert-danger">
+      The password doesn't match!
+    </div>
+  </div>
   <div class="checkbox">
     <label><input type="checkbox"> Remember me</label>
   </div>
