--- a/Source/frontend/src/app/navigation/main-navigation/main-navigation.component.html
+++ b/Source/frontend/src/app/navigation/main-navigation/main-navigation.component.html
@@ -16,9 +16,11 @@
             <a href="/search/{{keyword}}" class="btn btn-default">Search for {{keyword}} </a>
         </div>
         <ul class="nav navbar-nav">
+            <li><a href="#"> User: {{ loggedUser }} </a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Sign up</a></li>
         </ul>
+
     </div>
 </nav>
 <router-outlet></router-outlet>
