--- a/Source/frontend/src/app/register/register.component.html
+++ b/Source/frontend/src/app/register/register.component.html
@@ -1,47 +1,51 @@
 <form #registerForm="ngForm" (ngSubmit)="register()" class="center-block col-md-6">
 
 
-  <div class="form-group">
-    <label for="username">Username:</label>
-    <input type="text" class="form-control" name="username" id="username" [(ngModel)]="model.username" required minlength="4"
-      maxlength="30" #username="ngModel" (keyup)="checkUsername()">
-    <span [hidden]="username.pristine || !(isUserTaken | async)"> User is taken </span>
-    <div [hidden]="username.valid || username.pristine" class="alert alert-danger">
-      Please fill in username between 4 and 30 symbols
+    <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="text" class="form-control" name="username" id="username" [(ngModel)]="model.username" required minlength="4" maxlength="30" #username="ngModel" (keyup)="checkUsername()">
+        <span [hidden]="username.pristine || !(isUserTaken | async)"> User is taken </span>
+        <div [hidden]="username.valid || username.pristine" class="alert alert-danger">
+            Please fill in username between 4 and 30 symbols
+        </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="name">Name:</label>
-    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="model.name" required #name="ngModel">
-    <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-      Name is required
+    <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" id="name" name="name" [(ngModel)]="model.name" required #name="ngModel">
+        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+            Name is required
+        </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" name="email" id="email" [(ngModel)]="model.email" #email="ngModel" required>
-    <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
-      Email is required
+    <div class="form-group">
+        <label for="email">Email address:</label>
+        <input type="email" class="form-control" name="email" id="email" [(ngModel)]="model.email" #email="ngModel" required>
+        <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
+            Email is required
+        </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" name="password" id="password" [(ngModel)]="model.password" #password="ngModel"
-      required minlength="6" maxlength="30" pattern="^(?=.*\d)(?=.*[a-zA-Z]).{8,30}$">
-    <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
-      Please fill in Password, between 8 and 30 symbols, containing at least one digit and at least one letter
+    <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" name="password" id="password" [(ngModel)]="model.password" #password="ngModel" required minlength="6" maxlength="30" pattern="^(?=.*\d)(?=.*[a-zA-Z]).{8,30}$">
+        <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+            Please fill in Password, between 8 and 30 symbols, containing at least one digit and at least one letter
+        </div>
     </div>
-  </div>
-   <div class="form-group">
-    <label for="confirmPassword">Confirm Password:</label>
-    <input type="password" class="form-control" name="confirmPassword" id="confirmPassword" [(ngModel)]="model.confirmPassword" #confirmPassword="ngModel"
-      required minlength="6" maxlength="30" pattern="^(?=.*\d)(?=.*[a-zA-Z]).{8,30}$">
-    <div [hidden]="confirmPassword != password" class="alert alert-danger">
-      The password doesn't match!
+    <div class="form-group">
+        <label for="confirmPassword">Confirm Password:</label>
+        <input type="password" class="form-control" name="confirmPassword" id="confirmPassword" [(ngModel)]="model.confirmPassword" #confirmPassword="ngModel" required minlength="6" maxlength="30" pattern="^(?=.*\d)(?=.*[a-zA-Z]).{8,30}$">
+        <div [hidden]="confirmPassword != (model.password)" class="alert alert-danger">
+            The password doesn't match!
+        </div>
     </div>
-  </div>
-  <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Register</button>
+    <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Register</button>
 </form>
+
+<div class="alert alert-success center-block col-md-6" *ngIf="isSucc != null && isSucc">
+    The user is registered! Now you can <a href="/login"> log in</a>.
+</div>
+<div class="alert alert-danger center-block col-md-6" *ngIf="isSucc != null && !isSucc">
+    The registration was not successfull please try again!
+</div>
