--- a/Source/frontend/src/app/stories/stories.component.html
+++ b/Source/frontend/src/app/stories/stories.component.html
@@ -40,10 +40,7 @@
                  
                      </textarea>
                     </div>
-                    <div>
-                        {{f.value | json}}
-                    </div>
-                    <button type="submit" class="btn btn-default" [disabled]="!f.valid ">Submit</button>
+                    <button type="submit" class="btn btn-primary" [disabled]="!f.valid ">Submit</button>
                 </form>
             </div>
         </div>
